--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6",
     "webpack": "^4.46.0",
     "webpack-cli": "^3.3.12"
   },
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.9",
     "webpack-dev-server": "^3"
   }
 }
