--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
     "reselect": "^4.1.6",
-    "webpack": "^4.46.0",
-    "webpack-cli": "^3.3.12"
+    "webpack": "4.46.0",
+    "webpack-cli": "3.3.12"
   },
   "devDependencies": {
     "redux-devtools-extension": "^2.13.9",
-    "webpack-dev-server": "^3"
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0",
+    "webpack-dev-server": "3"
   }
 }
